--- a/sass/components/_nav-menu.scss
+++ b/sass/components/_nav-menu.scss
@@ -1,5 +1,5 @@
 .page-header__nav {
-  color: $primary-text-color;
+  color: $title-text-color;
 
   font-weight: 500;
 
@@ -38,7 +38,7 @@
 }
 
 .site-nav__link {
-  color: $primary-text-color;
+  color: $title-text-color;
   text-decoration: none;
   display: inline-block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
