--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -1,105 +1,176 @@
-/* Footer */
-
-.container.footer {
-    // display: flex;
-    // align-items: baseline;
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-
-.address > p {
-    margin-top: 0;
-    margin-bottom: 9px;
-}
-
-.address-link {
-    display: inline-block;
-}
-
-.address .address-link:not(:last-child) {
-    margin-bottom: 9px;
-}
-.net-footer {
-    width: 207px;
-    height: 81px;
-}
-
 .page-footer {
     color: $white-color;
-    background: $footer-bg-color;    
-}
+    background: $footer-bg-color; 
+  
+    @media screen and (max-width: 767px) {
+      min-width: 480px;
+    }
+    @media screen and (min-width: 768px) {
+      min-width: 768px;
+  
+      @include centeredFlex();
+    }
+    @media screen and (min-width: 1200px) {
+      min-width: 1200px;
+    }
+  
+    &__container {
+        padding-top: 60px;
+        padding-bottom: 60px;
+  
+      @media screen and (max-width: 767px) {
+        width: 480px;
+        height: 603px;
+      }
+  
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        width: 768px;
+        height: 463px;
+  
+        display: inline-flex;
+        flex-wrap: wrap;
+  
+        align-items: flex-start;
+        justify-content: space-around;
+      }
+  
+      @media screen and (min-width: 1200px) {
+        display: inline-flex;
+        flex-wrap: nowrap;
+        align-items: baseline;
+        justify-content: space-between;
+  
+        width: 1200px;
+        height: 252px;
+        padding: 60px 15px;
+      }
+    }
+  }
 
-
-.address {
-
-    margin-right: 69px;
-    text-decoration: none;
-    font-family: $font-main;
-    font-style: normal;
-    font-weight: normal;
+  .page-footer__address {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 60px;
+    }
+  
+    @media screen and (min-width: 768px) {
+      display: inline-flex;
+    }
+  }
+  
+  .address {
+    display: flex;
+    flex-direction: column;
+  
+    color: $white-color;
     font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
-}
-.address-link {
-    color: $footer-color;
-}
-.join {
-    
-    // display: block;
-    // margin-bottom: 20px;
-
-    font-family: $font-main;
     font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.14;
-
-    text-align: left;
-    text-transform: uppercase;
-}
-
-.mail-input {
-
+    text-align: center;
+  
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+    }
+  
+    &__text {
+      margin-bottom: 8px;
+  
+      @media screen and (min-width: 1200px) {
+        margin-bottom: 9px;
+      }
+    }
+  }
+  
+  .address-link {
     display: inline-block;
-    width: 358px;
+    color: $footer-color;
+    text-decoration: none;
+  
+    &:not(:last-child) {
+      margin-bottom: 8px;
+  
+      @media screen and (min-width: 768px) {
+        margin-bottom: 9px;
+      }
+    }
+  }
+  .mailing__form {
+    text-align: center;
+  
+    @media screen and (min-width: 768px) {
+      display: inline-block;
+      align-self: flex-end;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+      align-self: baseline;
+    }
+  }
+  
+  .mailing {
+    @media screen and (min-width: 768px) {
+      display: inline-block;
+    }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
+  }
+  
+  .mail-input {
+    margin: 0;
+  
+    width: 450px;
     height: 50px;
-    padding-left: 16px;
+  
+    padding: 18px 12px;
+  
+    margin-bottom: 20px;
+  
     border: 1px solid $footer-border;
-    box-sizing: border-box;
     box-shadow: 0px 4px 4px $input-bg-color;
     border-radius: 4px;
+    background-color: transparent;
+  
     color: $footer-color;
-    background-color: $footer-bg-color;
-
-}
-// .mailing {
-//     // margin-left: 94px;
-// }
-
-// .mailing-form {
-
-//     // position: relative;
-//     // display: flex;
-// }
-
-.btn.submit {
+  
+    @media screen and (min-width: 768px) {
+      display: block;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+      margin-bottom: 0;
+      margin-right: 12px;
+    }
+  
+    &::placeholder {
+      font-size: 16px;
+      line-height: 1.87;
+      letter-spacing: 0.03em;
+      color: $footer-color;
+    }
+  }
+  
+  .btn.submit {
+  
     display: inline-flex;
-    font-weight: 900;
-    letter-spacing: 0.06em;
-    margin-right: auto;
-    margin-left: auto;
+    justify-content: flex-start;
+  
+    padding: 10px 29px;
 }
+  
 .submit-icon {
-    display: block;
-    width: 24px;
-    height: 24px;
-    fill: currentColor;
+      width: 24px;
+      height: 24px;
+      margin-left: 10px;
+      /* align-self: flex-end; */
+      align-self: center;
+      fill: currentColor;
 }
 
-// .social.footer {
-//     // justify-content: flex-start;
-// }
+.socials-list.footer {
+    justify-content: flex-start;
+}
 
 .social-link {
     background-color: $bg-link;
