--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -74,10 +74,14 @@
     z-index: 3;
   }
 
+@media screen and (min-width:768px) {
+  border: none;
+  box-shadow: none;
+  
+}
+
   @media screen and (max-width: 767px) {
     display: none;
-    border: none;
-    box-shadow: none;
     position: absolute;
     top: 100%;
     left: 0;
